--- a/templates/index.html
+++ b/templates/index.html
@@ -21,5 +21,10 @@
             {% endfor %}
           {% endif %}
         {% endwith %}
+        <form action="/login" method="post">
+            <p>Email: <input type="text" name="email"></p>
+            <p>Password: <input type="password" name="password"></p>
+            <input type="submit" name="submit" value="Login">
+        </form>
     </body>
 </html>
