added login functionality that renders to success page

--- a/templates/success.html
+++ b/templates/success.html
@@ -5,8 +5,6 @@
         <title>Success</title>
     </head>
     <body>
-        <div id="wrapper">
-
-        </div>
+        <h1>Welcome User {{ session['userID'] }}! You've successfully logged in!</h1>
     </body>
 </html>
